attempt to fix diamonds and hearts appearing small on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,7 @@ body {
 .active-view {
   border-bottom: 5px solid blue; /* Replace 'blue' with your desired border color */
 }
+
+.card-suit {
+  font-family: "Arial", "Times New Roman", serif;
+}
